tests/baselines/reference/expr.errors.txt
==== tests/cases/compiler/expr.ts (71 errors) ====
    interface I {
    }
    
    enum E {
        Red, Green, Blue
    }
    
    function f() {
        var a;
        var n=3;
        var s="";
        var b=false;
        var i:I;
        var e:E;
    
        n&&a;
        n&&s;
        n&&b;
        n&&i;
        n&&n;
        n&&e;
    
        s&&a;
        s&&n;
        s&&b;
        s&&i;
        s&&s;
        s&&e;
    
        a&&n;
        a&&s;
        a&&b;
        a&&i;
        a&&a;
        a&&e;
    
        i&&n;
        i&&s;
        i&&b;
        i&&a;
        i&&i;
        i&&e;
    
        e&&n;
        e&&s;
        e&&b;
        e&&a;
        e&&i;
        e&&e;
    
        n||a;
        n||s;
        n||b;
        n||i;
        n||n;
        n||e;
    
        s||a;
        s||n;
        s||b;
        s||i;
        s||s;
        s||e;
    
        a||n;
        a||s;
        a||b;
        a||i;
        a||a;
        a||e;
    
        i||n;
        i||s;
        i||b;
        i||a;
        i||i;
        i||e;
    
        e||n;
        e||s;
        e||b;
        e||a;
        e||i;
        e||e;
    
        n==a;
        n==s;
        ~~~~
!!! error TS2009: Operator '==' cannot be applied to types 'number' and 'string'.
        n==b;
        ~~~~
!!! error TS2009: Operator '==' cannot be applied to types 'number' and 'boolean'.
        n==i;
        n==n;
        n==e;
    
        s==a;
        s==n;
        ~~~~
!!! error TS2009: Operator '==' cannot be applied to types 'string' and 'number'.
        s==b;
        ~~~~
!!! error TS2009: Operator '==' cannot be applied to types 'string' and 'boolean'.
        s==i;
        s==s;
        s==e;
        ~~~~
!!! error TS2009: Operator '==' cannot be applied to types 'string' and 'E'.
    
        a==n;
        a==s;
        a==b;
        a==i;
        a==a;
        a==e;
    
        i==n;
        i==s;
        i==b;
        i==a;
        i==i;
        i==e;
        ~~~~
!!! error TS2009: Operator '==' cannot be applied to types 'I' and 'E'.
    
        e==n;
        e==s;
        ~~~~
!!! error TS2009: Operator '==' cannot be applied to types 'E' and 'string'.
        e==b;
        ~~~~
!!! error TS2009: Operator '==' cannot be applied to types 'E' and 'boolean'.
        e==a;
        e==i;
        ~~~~
!!! error TS2009: Operator '==' cannot be applied to types 'E' and 'I'.
        e==e;
    
        +i;
        +s;
        +n;
        +a;
        +b;
    
        -i;
        -s;
        -n;
        -a;
        -b;
    
        !i;
        !s;
        !n;
        !a;
        !b;
    
    
        n+a;
        n+s;
        n+b;
        ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        n+i;
        ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        n+n;
        n+e;
    
        s+a;
        s+n;
        s+b;
        s+i;
        s+s;
        s+e;
    
        a+n;
        a+s;
        a+b;
        a+i;
        a+a;
        a+e;
    
        i+n;
        ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        i+s;
        i+b;
        ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        i+a;
        i+i;
        ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        i+e;
        ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    
        e+n;
        e+s;
        e+b;
        ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        e+a;
        e+i;
        ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
        e+e;
    
        n^a;
        n^s;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        n^b;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        n^i;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        n^n;
        n^e;
    
        s^a;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s^n;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s^b;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s^i;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s^s;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s^e;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        a^n;
        a^s;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        a^b;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        a^i;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        a^a;
        a^e;
    
        i^n;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i^s;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i^b;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i^a;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i^i;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i^e;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        e^n;
        e^s;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        e^b;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        e^a;
        e^i;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        e^e;
    
        n-a;
        n-s;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        n-b;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        n-i;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        n-n;
        n-e;
    
        s-a;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s-n;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s-b;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s-i;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s-s;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        s-e;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        a-n;
        a-s;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        a-b;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        a-i;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        a-a;
        a-e;
    
        i-n;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i-s;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i-b;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i-a;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i-i;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        i-e;
        ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
        e-n;
        e-s;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        e-b;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        e-a;
        e-i;
          ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        e-e;
    
    }